--- a/k2_submission/README
+++ b/k2_submission/README
@@ -1,5 +1,5 @@
-
-compile the program in kernel folder
+REBUILD
+compile the program in k2_submission folder
 	make clean && make
 copy the compiled elf file onto tftp
 	cp kernel.elf /u/cs452/tftp/ARM/ur_user_name/
@@ -9,3 +9,6 @@ load the program onto the board
 	load -b 0x00218000 -h 10.15.167.4 "ARM/ur_user_name/kernel.elf
 type go
 	go
+
+LOADING AND RUNNING THE PRE-COMPILED VERSION
+load -b 0x00218000 -h 10.15.167.4 "ARM/r59wang/k2.elf;go
